trunk/Archive2/62/0de4e0670638b9/output
clang++ says OK
main.cpp: In function 'constexpr int c1(int)':
main.cpp:11:1: error: expression '(x = n)' is not a constant-expression
 }
 ^
g++ says NOT OK
